--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -13,7 +13,7 @@
     "default_title": "A-React-Title",
     "default_popup": "popup.html"
   },
-  "permissions": ["storage", "tabs", "activeTab"],
+  "permissions": ["storage", "tabs", "scripting"],
   "host_permissions": ["<all_urls>"],
   "background": {
     "service_worker": "background.js"
