--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -13,7 +13,7 @@
     "default_title": "A-React-Title",
     "default_popup": "popup.html"
   },
-  "permissions": ["storage", "tabs", "scripting"],
+  "permissions": ["storage", "tabs", "scripting", "activeTab", "userScripts"],
   "host_permissions": ["<all_urls>"],
   "background": {
     "service_worker": "background.js"
@@ -29,6 +29,10 @@
     {
       "resources": ["style.css", "*.js"],
       "matches": ["*://*.reddit.com/*"]
+    },
+    {
+      "resources": ["*.js"],
+      "matches": ["<all_urls>"]
     }
   ]
 }
