--- a/src/assets/manifest.json
+++ b/src/assets/manifest.json
@@ -1,5 +1,6 @@
 {
   "manifest_version": 3,
+  "minimum_chrome_version": "120",
   "version": "1.0.0",
   "name": "AdBlocker-Test-Extension",
   "description": "Tools for remove web content",
